--- a/index.html
+++ b/index.html
@@ -1,179 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Elections</title>
-        <meta name="description" content="Scrollama: Sticky Overlay Example" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="style.css" />
-        <style>
-            #scrolly {
-                position: relative;
-                background-color: #f3f3f3;
-                padding: 1rem;
-            }
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Elections</title>
+    <meta name="description" content="Scrollama: Sticky Overlay Example" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-            article {
-                position: relative;
-                padding: 0;
-                max-width: 20rem;
-                margin: 0 auto;
-            }
+  <body>
+    <main>
+      <section id="scrolly">
+        <figure>
+          <div class="flourish-embed" data-src="story/466945" data-url="https://flo.uri.sh/story/466945/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+        </figure>
 
-            figure {
-                position: -webkit-sticky;
-                position: sticky;
-                left: 0;
-                width: 100%;
-                margin: 0;
-                -webkit-transform: translate3d(0, 0, 0);
-                -moz-transform: translate3d(0, 0, 0);
-                transform: translate3d(0, 0, 0);
-                background-color: #8a8a8a;
-                z-index: 0;
-            }
+        <article>
+          <div class="step" data-step="1">
+            <div class="visible-part">
+              Когда говорят, что явка на выборах составила 60% — это значит, что столько людей проголосовало в среднем. На практике бывает большое количество участков, где голосовало 58 и 62% избирателей. Бывают и такие, где проголосовали почти все или почти никто не пришёл, но их, как правило, сильно меньше. 
+            </div>
+          </div>
+          <div class="step" data-step="2">
+            <div class="visible-part">
+              Если разбить все значения явки на блоки размером в 1% (участки, куда пришло от 0 до 1% избирателей, от 1 до 2% избирателей и так далее) и отложить их по оси x, а по y отметить количество голосов, которые получили разные кандидаты, то мы увидим, как выглядит распределение голосов на выборах.
+            </div>
+          </div>
+          <div class="step" data-step="3">
+            <div class="visible-part">
+              Электоральные аналитики говорят, что это распределение в идеальном случае должно напоминать колокол. Исключения случаются и не говорят о фальсификациях сами по себе, однако заставляют пристально присмотреться к результатам.
+            </div>
+          </div>
+          <div class="step" data-step="4">
+          </div>
+          <div class="step" data-step="5">
+            <div class="visible-part">
+              Практически так и было на выборах президента 2000 года. Эксперты называют их самыми честными в истории современной России. Голоса за Владимира Путина по форме похожи на колокол.
+            </div>
+          </div>
+          <div class="step" data-step="6">
+          </div>
+          </div>
+        </article>
+      </section>
+    </main>
 
-            figure p {
-                text-align: center;
-                padding: 1rem;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                -moz-transform: translate(-50%, -50%);
-                -webkit-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
-                font-size: 8rem;
-                font-weight: 900;
-                color: #fff;
-            }
-
-            .step {
-                margin: 0 auto 2rem auto;
-                color: #fff;
-                background-color: rgba(0, 0, 0, 0.1);
-            }
-
-            .step:last-child {
-                margin-bottom: 0;
-            }
-
-            .step.is-active p {
-                background-color: goldenrod;
-                color: #3b3b3b;
-            }
-
-            .step p {
-                text-align: center;
-                padding: 1rem;
-                font-size: 1.5rem;
-                background-color: #3b3b3b;
-            }
-        </style>
-    </head>
-
-    <body>
-        <main>
-            <p>
-                Какой-то текст
-            </p>
-
-            <section id="scrolly">
-                <figure>
-                    <div class="flourish-embed" data-src="story/453864" data-url="https://flo.uri.sh/story/453864/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-                </figure>
-
-                <article>
-                    <div class="step" data-step="1">
-                        <p>STEP 1</p>
-                    </div>
-                    <div class="step" data-step="2">
-                        <p>STEP 2</p>
-                    </div>
-                </article>
-            </section>
-
-            <section id="outro"></section>
-        </main>
-
-        <!-- <div class='debug'></div> -->
-        <script src="https://unpkg.com/d3@5.9.1/dist/d3.min.js"></script>
-        <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
-        <script src="stickyfill.min.js"></script>
-        <script src="scrollama.min.js"></script>
-        <script>
-            // using d3 for convenience
-            var main = d3.select("main");
-            var scrolly = main.select("#scrolly");
-            var figure = scrolly.select("figure");
-            var article = scrolly.select("article");
-            var step = article.selectAll(".step");
-
-            // initialize the scrollama
-            var scroller = scrollama();
-
-            // generic window resize listener event
-            function handleResize() {
-                // 1. update height of step elements
-                var stepH = Math.floor(window.innerHeight * 0.75);
-                step.style("height", stepH + "px");
-
-                var figureHeight = window.innerHeight / 2;
-                var figureMarginTop = (window.innerHeight - figureHeight) / 2;
-
-                figure.style("height", figureHeight + "px").style("top", figureMarginTop + "px");
-
-                // 3. tell scrollama to update new element dimensions
-                scroller.resize();
-            }
-
-            // scrollama event handlers
-            function handleStepEnter(response) {
-                console.log(response);
-                // response = { element, direction, index }
-
-                // add color to current step only
-                step.classed("is-active", function (d, i) {
-                    return i === response.index;
-                });
-
-                // update graphic based on step
-                figure.select("p").text(response.index + 1);
-                
-                var iframe = document.querySelector("#scrolly iframe");
-                iframe.src = iframe.src.replace(/#slide-.*/, "") + "#slide-" + response.index;
-                
-            }
-
-            function setupStickyfill() {
-                d3.selectAll(".sticky").each(function () {
-                    Stickyfill.add(this);
-                });
-            }
-
-            function init() {
-                setupStickyfill();
-
-                // 1. force a resize on load to ensure proper dimensions are sent to scrollama
-                handleResize();
-
-                // 2. setup the scroller passing options
-                // 		this will also initialize trigger observations
-                // 3. bind scrollama event handlers (this can be chained like below)
-                scroller
-                    .setup({
-                        step: "#scrolly article .step",
-                        offset: 0.33,
-                        debug: false,
-                    })
-                    .onStepEnter(handleStepEnter);
-
-                // setup resize event
-                window.addEventListener("resize", handleResize);
-            }
-
-            // kick things off
-            init();
-        </script>
-    </body>
+    <!-- <div class='debug'></div> -->
+    <script src="https://unpkg.com/d3@5.9.1/dist/d3.min.js"></script>
+    <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
+    <script src="stickyfill.min.js"></script>
+    <script src="scrollama.min.js"></script>
+    <script src="actions.js"></script>
+  </body>
 </html>
