--- a/index.html
+++ b/index.html
@@ -19,29 +19,50 @@
         <article>
           <div class="step" data-step="1">
             <div class="visible-part">
-              Когда говорят, что явка на выборах составила 60% — это значит, что столько людей проголосовало в среднем. На практике бывает большое количество участков, где голосовало 58 и 62% избирателей. Бывают и такие, где проголосовали почти все или почти никто не пришёл, но их, как правило, сильно меньше. 
+              Когда говорят, что явка на выборах составила 60% — это значит, что столько людей проголосовало в среднем. 
             </div>
           </div>
           <div class="step" data-step="2">
             <div class="visible-part">
-              Если разбить все значения явки на блоки размером в 1% (участки, куда пришло от 0 до 1% избирателей, от 1 до 2% избирателей и так далее) и отложить их по оси x, а по y отметить количество голосов, которые получили разные кандидаты, то мы увидим, как выглядит распределение голосов на выборах.
+              В таком случае на большинство участков, скорее всего, пришло около 60% избирателей. Для наглядности покажем несколько таких участков. 
             </div>
           </div>
           <div class="step" data-step="3">
-            <div class="visible-part">
-              Электоральные аналитики говорят, что это распределение в идеальном случае должно напоминать колокол. Исключения случаются и не говорят о фальсификациях сами по себе, однако заставляют пристально присмотреться к результатам.
-            </div>
           </div>
           <div class="step" data-step="4">
-          </div>
-          <div class="step" data-step="5">
             <div class="visible-part">
-              Практически так и было на выборах президента 2000 года. Эксперты называют их самыми честными в истории современной России. Голоса за Владимира Путина по форме похожи на колокол.
+              Также было много участков, где проголосовало примерно 58, 59, 61, 62 процента избирателей
             </div>
           </div>
+          <div class="step" data-step="5">
+          </div>
           <div class="step" data-step="6">
+            <div class="visible-part">
+              Были и такие, где проголосовали почти все или почти никто не пришёл. Их, как правило, сильно меньше.
+            </div>
           </div>
+          <div class="step" data-step="7">
           </div>
+          <div class="step" data-step="8">
+            <div class="visible-part">
+              Если мы будем продолжать отмечать все оставшиеся участке по такой же схеме, то получим графическое распределение явки на участки. Электоральные аналитики говорят, что это распределение в идеальном случае должно напоминать колокол.
+            </div>
+          </div>
+          <div class="step" data-step="9">
+          </div>
+          <div class="step" data-step="10">
+            <div class="visible-part">
+              Исключения случаются и не говорят о фальсификациях сами по себе, однако заставляют пристально присмотреться к результатам.
+            </div>
+          </div>
+          <div class="step" data-step="11">
+            <div class="visible-part">
+              Практически такое распределение явки и было на выборах президента 2000 года. Эксперты называют их самыми честными в истории современной России. Голоса за Владимира Путина по форме похожи на колокол.
+            </div>
+          </div>
+          <div class="step" data-step="13">
+          </div>
+          
         </article>
       </section>
     </main>
