--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <main>
       <section id="scrolly">
         <figure>
+          <!-- <div class="flourish-embed" data-src="fl-story/index.html"><script src="fl-story/flourish.embed.js"></script></div> -->
+
           <div class="flourish-embed" data-src="story/466945" data-url="https://flo.uri.sh/story/466945/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
         </figure>
 
@@ -45,7 +47,7 @@
           </div>
           <div class="step" data-step="8">
             <div class="visible-part">
-              Если мы будем продолжать отмечать все оставшиеся участке по такой же схеме, то получим графическое распределение явки на участки. Электоральные аналитики говорят, что это распределение в идеальном случае должно напоминать колокол.
+              Если мы будем продолжать отмечать все оставшиеся участке по такой же схеме, то получим графическое распределение явки на участки. Электоральные аналитики говорят, что это распределение в идеальном случае должно напоминать колокол:
             </div>
           </div>
           <div class="step" data-step="9">
@@ -60,7 +62,99 @@
               Практически такое распределение явки и было на выборах президента 2000 года. Эксперты называют их самыми честными в истории современной России. Голоса за Владимира Путина по форме похожи на колокол.
             </div>
           </div>
+          <div class="step" data-step="12">
+          </div>
           <div class="step" data-step="13">
+            <div class="visible-part">
+              Тоже самое происходит и с голосами за других кандидатов. Вне зависимости от того, сколько людей пришло на участки, сохраняется соотношение голосов за Путина и других кандидатов. Согласно теории математика Сергея Шпилькина, это говорит о том, что голосование проходило без фальсификаций.
+            </div>
+          </div>
+          <div class="step" data-step="14">
+          </div>
+          <div class="step" data-step="15">
+            <div class="visible-part">
+              Аномально выглядит только «хвост» графика. На участках с явкой от 78% голосов за Путина становится подозрительно, но незначительно больше. 
+            </div>
+          </div>
+          <div class="step" data-step="16">
+          </div>
+          <div class="step" data-step="17">
+            <div class="visible-part">
+              Совсем другая картинка возникает на выборах в Госдуму в 2016 году. Происходящее на ней называют феноменом «двугорбой России». Так, согласно данным ЦИК, выглядят голоса за «Единую Россию».
+            </div>
+          </div>
+          <div class="step" data-step="18">
+          </div>
+          <div class="step" data-step="19">
+            <div class="visible-part">
+              Распределение голосов за КПРФ, ЛДПР и другие партии же больше похоже на привычный нам колокол.
+            </div>
+          </div>
+          <div class="step" data-step="20">
+          </div>
+          <div class="step" data-step="21">
+            <div class="visible-part">
+              Всё, что нарисовано на графике сразу после немного помятого «колокола» — так называемый «второй горб», повод усомниться в честности голосования. 
+            </div>
+          </div>
+          <div class="step" data-step="22">
+          </div>
+          <div class="step" data-step="23">
+            <div class="visible-part">
+              Дело в том, что «Единая Россия» набирала подозрительно много голосов на участках с высокой явкой. Это может говорить о том, что там искусственно «дорисовывали» голоса за партию власти — так росла и явка, и результат.
+            </div>
+          </div>
+          <div class="step" data-step="24">
+            <div class="visible-part">
+              Чтобы примерно оценить, сколько честных голосов за «Единую Россию» отдали избиратели, к этим данным можно применить правило математика Шпилькина, сокращенное до фразы «при нормальном голосовании явка не должна влиять на соотношение голосов, отданных за разных кандидатов». Серая линия на графике показывает, как бы выглядели результаты без фальсификаций. 
+            </div>
+          </div>
+          <div class="step" data-step="25">
+          </div>
+          <div class="step" data-step="26">
+            <div class="visible-part">
+              Получается, что только 16,3 млн голосов за эту партию выглядят нормально, а 12,1 млн — аномально. 
+            </div>
+          </div>
+          <div class="step" data-step="27">
+            <div class="visible-part">
+              На этом графике также можно наблюдать аномалию, которую называют «пилой Чурова» — в честь экс-главы ЦИКа Владимира Чурова. Пилу напоминает большое количество «зубцов», возникающих чаще всего на значениях явки, кратных пяти.
+            </div>
+          </div>
+          <div class="step" data-step="28">
+          </div>
+          <div class="step" data-step="29">
+            <div class="visible-part">
+              Такие пики — самый верный признак фальсификаций. Когда нам надо придумать какой-то результат «с потолка», мы чаще выбираем «красивые» числа — 55, 60, 70, 75%. Но по законам статистики числа, оканчивающиеся на 1, 2, 3, 4, 6… не должны встречаться заметно реже.
+            </div>
+          </div>
+          <div class="step" data-step="30">
+          </div>
+          <div class="step" data-step="29">
+            <div class="visible-part">
+              График голосов «за» на голосовании 2020 года визуально совсем не похож на «колокол». Даже пилу он напоминает отдаленно — больше какой-то «зазубренный топор Эллы Панфиловой», нынешней руководительницы ЦИКа. 
+            </div>
+          </div>
+          <div class="step" data-step="31">
+          </div>
+          <div class="step" data-step="32">
+            <div class="visible-part">
+              Вот так графически выглядит путь, который мы прошли за 20 лет от более менее честных выборов к, возможно, историческому рекорду в фальсификации голосования.
+            </div>
+          </div>
+          <div class="step" data-step="33">
+          </div>
+          <div class="step" data-step="34">
+            <div class="visible-part">
+              Картинка получается ещё более интересной, если изучать каждый населённый пункт по отдельности. Так, невероятную мобилизацию показали показали все УИКи с номерами от 2010 по 2190 — избирательные участки города Набережные Челны. Почти на каждый из 181 одного участка пришло проголосовать 80±2% избирателей. 
+            </div>
+          </div>
+          <div class="step" data-step="35">
+          </div>
+          <div class="step" data-step="36">
+            <div class="visible-part">
+              Подобные цифры — прямой признак фальсификаций. Вероятность того, что на каждый участок придёт 80% избирателей, даже меньше, чем получить «орла» 180 раз подряд, подбрасывая монетку.
+            </div>
           </div>
           
         </article>
@@ -68,8 +162,8 @@
     </main>
 
     <!-- <div class='debug'></div> -->
-    <script src="https://unpkg.com/d3@5.9.1/dist/d3.min.js"></script>
-    <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
+    <script src="d3.min.js"></script>
+    <script src="intersection-observer.js"></script>
     <script src="stickyfill.min.js"></script>
     <script src="scrollama.min.js"></script>
     <script src="actions.js"></script>
