--- a/index.html
+++ b/index.html
@@ -153,8 +153,55 @@
           </div>
           <div class="step" data-step="36">
             <div class="visible-part">
-              Подобные цифры — прямой признак фальсификаций. Вероятность того, что на каждый участок придёт 80% избирателей, даже меньше, чем получить «орла» 180 раз подряд, подбрасывая монетку.
+              Подобные цифры — прямой признак фальсификаций. Вероятность того, что на каждый участок придёт 80% избирателей, даже меньше, чем, подбрасывая монетку, получить «орла» 180 раз подряд.
             </div>
+          </div>
+          <div class="step" data-step="37">
+          </div>
+          <div class="step" data-step="38">
+            <div class="visible-part">
+              Ещё один признак, косвенно указывающий на фальсификации, — это зависимость результата голосования от явки. Иными словами, чем больше людей приходит на участки, тем лучше результат какого-то кандидата. 
+            </div>
+          </div>
+          <div class="step" data-step="39">
+            <div class="visible-part">
+              Такую зависимость можно легко увидеть на графике, если по одной оси отложить явку, а по другой — результаты кандидата. Если зависимости нет, то график будет напоминать хаотичное пятно, в противном же случае — диагональную линию.
+            </div>
+          </div>
+          <div class="step" data-step="40">
+            <div class="visible-part">
+              Здесь и далее мы случайным образом выбрали примерно 3000 УИКов, чтобы посмотреть, как выглядели результаты голосования разных лет. Это сильно не повлияет на вид зависимости, но будет меньше тормозить в вашем браузере.
+            </div>
+          </div>
+          <div class="step" data-step="41">
+            <div class="visible-part">
+              Вот так, например, выглядели голоса за Владимира Путина на выборах 2000 года, которые эксперты называли самыми честными. Облако точек выглядит кучно и в целом расположено около общего официального результата: тогда Путин получил 52,8% голосов при явке 68,9%. 
+            </div>
+          </div>
+          <div class="step" data-step="42">
+          </div>
+          <div class="step" data-step="43">
+            <div class="visible-part">
+              Иная картинка выходит, если изобразить голоса за Владимира Путина на выборах в 2018. 
+            </div>
+          </div>
+          <div class="step" data-step="44">
+          </div>
+          <div class="step" data-step="45">
+            <div class="visible-part">
+              Подобную аномалию аналитики называют «кометный хвост». После примерно 75% явки кучное облако превращается в ровный хвост, что сигнализирует от зависимости результата президента от явки.
+            </div>
+          </div>
+          <div class="step" data-step="46">
+          </div>
+          <div class="step" data-step="47">
+            <div class="visible-part">
+              На голосовании по поправкам в 2020 году «хвост» кометы перерос её саму — зависимости начинают быть заметны уже после 50% явки.
+            </div>
+          </div>
+          <div class="step" data-step="48">
+          </div>
+          <div class="step" data-step="49">
           </div>
           
         </article>
