--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Scrollama: Sticky Overlay Example" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+
+    <script src="d3.min.js"></script>
+    <script src="jquery.min.js"></script>
   </head>
 
   <body>
@@ -15,7 +18,16 @@
         <figure>
           <!-- <div class="flourish-embed" data-src="fl-story/index.html"><script src="fl-story/flourish.embed.js"></script></div> -->
 
+          <script>
+            function onMyFrameLoad() {
+              console.log('==================')
+              console.log(d3.select(".flourish-embed").node().getBoundingClientRect())
+              console.log('==================')
+            }
+          </script>
+
           <div class="flourish-embed" data-src="story/466945" data-url="https://flo.uri.sh/story/466945/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+    
         </figure>
 
         <article>
@@ -139,77 +151,97 @@
           </div>
           <div class="step" data-step="32">
             <div class="visible-part">
-              Вот так графически выглядит путь, который мы прошли за 20 лет от более менее честных выборов к, возможно, историческому рекорду в фальсификации голосования.
+              Можно заметить, что соотношение голосов «за» и «против» сильно меняется на высоких значениях явки.
             </div>
           </div>
           <div class="step" data-step="33">
           </div>
           <div class="step" data-step="34">
+          </div>
+          <div class="step" data-step="35">
+            <div class="visible-part">
+              Если воспользоваться методом математика Шпилькина, который мы показывали на примере выборов 2016 года, и «выровнять» голосование по явке, мы увидим, что голосов «за» поправки в реальности было сильно меньше.
+            </div>
+          </div>
+          <div class="step" data-step="36">
+          </div>
+          <div class="step" data-step="37">
+            <div class="visible-part">
+              Таким образом, по версии Шпилькина, «нарисовано» было, по меньшей мере, 26 из 56 миллионов голосов. И это даже при условии, что «нормализованное» распределение всё ещё не напоминает колокол. Это — рекорд за всю историю голосований в стране.
+            </div>
+          </div>
+          <div class="step" data-step="38">
+          </div>
+          <div class="step" data-step="37">
+            <div class="visible-part">
+              Вот так графически выглядит путь, который мы прошли за 20 лет от более менее честных выборов к, возможно, историческому рекорду в фальсификации голосования.
+            </div>
+          </div>
+          <div class="step" data-step="38">
+          </div>
+          <div class="step" data-step="39">
             <div class="visible-part">
               Картинка получается ещё более интересной, если изучать каждый населённый пункт по отдельности. Так, невероятную мобилизацию показали показали все УИКи с номерами от 2010 по 2190 — избирательные участки города Набережные Челны. Почти на каждый из 181 одного участка пришло проголосовать 80±2% избирателей. 
             </div>
           </div>
-          <div class="step" data-step="35">
-          </div>
-          <div class="step" data-step="36">
-            <div class="visible-part">
-              Подобные цифры — прямой признак фальсификаций. Вероятность того, что на каждый участок придёт 80% избирателей, даже меньше, чем, подбрасывая монетку, получить «орла» 180 раз подряд.
-            </div>
-          </div>
-          <div class="step" data-step="37">
-          </div>
-          <div class="step" data-step="38">
-            <div class="visible-part">
-              Ещё один признак, косвенно указывающий на фальсификации, — это зависимость результата голосования от явки. Иными словами, чем больше людей приходит на участки, тем лучше результат какого-то кандидата. 
-            </div>
-          </div>
-          <div class="step" data-step="39">
-            <div class="visible-part">
-              Такую зависимость можно легко увидеть на графике, если по одной оси отложить явку, а по другой — результаты кандидата. Если зависимости нет, то график будет напоминать хаотичное пятно, в противном же случае — диагональную линию.
-            </div>
-          </div>
           <div class="step" data-step="40">
-            <div class="visible-part">
-              Здесь и далее мы случайным образом выбрали примерно 3000 УИКов, чтобы посмотреть, как выглядели результаты голосования разных лет. Это сильно не повлияет на вид зависимости, но будет меньше тормозить в вашем браузере.
-            </div>
           </div>
           <div class="step" data-step="41">
             <div class="visible-part">
-              Вот так, например, выглядели голоса за Владимира Путина на выборах 2000 года, которые эксперты называли самыми честными. Облако точек выглядит кучно и в целом расположено около общего официального результата: тогда Путин получил 52,8% голосов при явке 68,9%. 
+              Подобные цифры — прямой признак фальсификаций. Вероятность того, что на каждый участок придёт 80% избирателей, даже меньше, чем, подбрасывая монетку, получить «орла» 180 раз подряд.
             </div>
           </div>
           <div class="step" data-step="42">
           </div>
           <div class="step" data-step="43">
             <div class="visible-part">
-              Иная картинка выходит, если изобразить голоса за Владимира Путина на выборах в 2018. 
+              Вернёмся к важному признаку, также указывающему на фальсификации, — зависимости результата голосования от явки. Это ситуации, когда чем больше людей приходит на участки, тем лучше результат какого-то кандидата.
             </div>
           </div>
           <div class="step" data-step="44">
+            <div class="visible-part">
+              Такую зависимость можно легко увидеть на графике, если по одной оси отложить явку, а по другой — результаты кандидата. Если зависимости нет, то график будет напоминать хаотичное пятно, в противном же случае — диагональную линию.
+            </div>
           </div>
           <div class="step" data-step="45">
+            <div class="visible-part">
+              Здесь и далее мы случайным образом выбрали примерно 3000 УИКов, чтобы посмотреть, как выглядели результаты голосования разных лет. Это сильно не повлияет на вид зависимости, но будет меньше тормозить в вашем браузере.
+            </div>
+          </div>
+          <div class="step" data-step="46">
+            <div class="visible-part">
+              Вот так, например, выглядели голоса за Владимира Путина на выборах 2000 года, которые эксперты называли самыми честными. Облако точек выглядит кучно и в целом расположено около общего официального результата: тогда Путин получил 52,8% голосов при явке 68,9%. 
+            </div>
+          </div>
+          <div class="step" data-step="47">
+          </div>
+          <div class="step" data-step="48">
+            <div class="visible-part">
+              Иная картинка выходит, если изобразить голоса за Владимира Путина на выборах в 2018. 
+            </div>
+          </div>
+          <div class="step" data-step="49">
+          </div>
+          <div class="step" data-step="50">
             <div class="visible-part">
               Подобную аномалию аналитики называют «кометный хвост». После примерно 75% явки кучное облако превращается в ровный хвост, что сигнализирует от зависимости результата президента от явки.
             </div>
           </div>
-          <div class="step" data-step="46">
+          <div class="step" data-step="51">
           </div>
-          <div class="step" data-step="47">
+          <div class="step" data-step="52">
             <div class="visible-part">
               На голосовании по поправкам в 2020 году «хвост» кометы перерос её саму — зависимости начинают быть заметны уже после 50% явки.
             </div>
           </div>
-          <div class="step" data-step="48">
+          <div class="step" data-step="53">
           </div>
-          <div class="step" data-step="49">
-          </div>
-          
+          <div class="step" data-step="54">
+          </div>        
         </article>
       </section>
     </main>
 
-    <!-- <div class='debug'></div> -->
-    <script src="d3.min.js"></script>
     <script src="intersection-observer.js"></script>
     <script src="stickyfill.min.js"></script>
     <script src="scrollama.min.js"></script>
